--- a/TeX-IMISeminar-en_Vorlage/main.tex
+++ b/TeX-IMISeminar-en_Vorlage/main.tex
@@ -261,6 +261,8 @@ In this section, the essential basics regarding Binary Decision Trees and Random
 
  The second result shows that training a RDF with volume $a$ and testing with volume $b$ does not yield the same outcome concerning accuracy as training with volume $b$ and testing with $a$. That means that there is no symmetry regarding training and testing with volumes. Figure 11 shows the table's left side shows Dice Scores after training with just one volume and testing with all others, while the right site is the other way around. It should be emphasized that the right site draws a higher overall score. This shows that training a whole RDF with just one volume does not yield acceptable results, while training with all volumes but one can be possible. 
 
+\newpage
+
  \begin{figure}[H]
  \centering \includegraphics[scale=0.7]{BDT17.png}\label{fig:fig17}
  \caption{Training and testing is not symmetric}
